<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    android:padding="5dp"
    tools:context=".MainActivity">

    <!--    Registration section starts-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:padding="5dp"
        android:layout_marginTop="50dp"
        android:text="@string/registration_form"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:padding="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etv_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name_field_hint" />

        <EditText
            android:id="@+id/etv_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="Your Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etv_phone_number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:textFontWeight="400"
            android:hint="Your Mobile Number"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/spv_gender_field"
            android:layout_width="wrap_content"
            android:padding="5sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btv_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="Submit" />

    </LinearLayout>

    <!--    Registration section Ends-->

</LinearLayout>