...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    android:id="@+id/profileActivityId"
    tools:context=".ProfileActivity">

    <!--    Registration section starts-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
